@@ -9,6 +9,7 @@ For a detailed list of changes, please see ChangeLog.
  * Bug fixes:
    - Error when opening database containing missing entry titles
      (LP: #1586335)
+   - Properly handle blank entry and folder titles
 
 0.46 (2016-03-13)
 
